[package]
name = "axvcpu"
authors = ["aarkegz <aarkegz@gmail.com>"]
version = "0.5.0"
edition = "2024"
categories = ["virtualization", "no-std"]
description = "Virtual CPU abstraction for ArceOS hypervisor"
repository = "https://github.com/arceos-hypervisor/axvcpu"
keywords = ["vcpu", "hypervisor", "arceos"]
license = "Apache-2.0"

[dependencies]
ax-errno = "0.4.2"
ax-memory-addr = "0.6.1"
ax-percpu = "0.4.3"
axaddrspace = "0.5.0"
axvisor_api = "0.5.0"
