[workspace]
resolver = "2"
members = ["axvisor_api_proc"]

[workspace.package]
authors = ["Su Mingxian <aarkegz@gmail.com>"]
edition = "2024"
repository = "https://github.com/arceos-hypervisor/axvisor_api"
license = "Apache-2.0"

[package]
name = "axvisor_api"
version = "0.5.6"
description = "Basic API for components of the Hypervisor on ArceOS"
documentation = "https://docs.rs/axvisor_api"
readme = "README.md"
keywords = ["axvisor", "api", "embedded", "hypervisor"]
categories = ["embedded", "no-std"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# === Core Components ===
# Procedural macro definitions
axvisor_api_proc = { path = "axvisor_api_proc", version = "0.5"}

# === Third-party Libraries ===
# Address space abstraction
axaddrspace = "0.5"
# Interface definition tools
ax-crate-interface = "0.5"
# Physical/virtual address types
ax-memory-addr = "0.6"
# CPU mask
ax-cpumask = "0.3"


[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-none",
    "riscv64gc-unknown-none-elf",
    "aarch64-unknown-none-softfloat",
]
